--- a/Assignment8/index.html
+++ b/Assignment8/index.html
@@ -18,7 +18,7 @@
         <input type="text" placeholder="First name" name="first_name" class="size"  id="name1"><br><br>
         <input type="text" placeholder="Last name" name="last_name" class="size"  id="name2">
        
-        <p class="font"><u>Contact number:</u></p>
+        <p class="font"><u>Contact Number:</u></p>
   
         <input type="text" placeholder="Enter phone number" name="phone" class="size"  id="number">
         <p class="font"><u>Login Details:</u></p>
